# msmarco-bm25-search-engine

./: .gitignore  AGENTS.md  CMakeLists.txt  IMPLEMENTATION.md  README.md
.github/workflows/: ci.yml
bench/: bench_compression.cpp  bench_index_size.cpp  bench_latency.cpp  run_memory.sh
docs/: benchmark_results.md  compression_table.md  index_size.md  memory_table.md  metrics_dev.json  metrics_dl19.json  metrics_dl20.json  renovation_presentation_plan.md
eval/: prepare_msmarco.sh  run_eval.py  trec_run_writer.cpp
include/: allocator.hpp  bm25.hpp  builder.hpp  codec.hpp  inverted_list.hpp  log.hpp  mmap_file.hpp  posting.hpp  raw32.hpp  search_engine.hpp  thread_pool.hpp  tokenizer.hpp  varbyte.hpp
rag_demo/: rag_demo.py  requirements.txt  retriever.py
scripts/: build_two_indexes.sh  eval_all.sh  extract_rss.py  plot_latency.py  plot_summary.py
src/: build_index.cpp  builder.cpp  inverted_list.cpp  search_cli.cpp  search_engine.cpp
tests/: index_fixtures.hpp  test_allocator.cpp  test_bm25.cpp  test_builder.cpp  test_codec.cpp  test_eval.py  test_helpers.hpp  test_inverted_list.cpp  test_rag_pipeline.py  test_raw32.cpp  test_scripts.py  test_search_engine.cpp  test_thread_pool.cpp  test_tokenizer.cpp  test_varbyte.cpp
